--- a/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
+++ b/src/MicroServices.Contract.ServiceBus/04.Contract.ServiceBus.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MicroServices.Contract.Api\03.Contract.Api.csproj" />
     <ProjectReference Include="..\MicroServices\02.SharedKernel.csproj" />
   </ItemGroup>
 
