--- a/src/MicroServices.Implementation/03.Implementation.csproj
+++ b/src/MicroServices.Implementation/03.Implementation.csproj
@@ -40,6 +40,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
