Moved MicroServiceBusController and other components back to implementation project.

--- a/src/MicroServices.Implementation.TestEngine/02.Implementation.TestEngine.csproj
+++ b/src/MicroServices.Implementation.TestEngine/02.Implementation.TestEngine.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MicroServices.Implementation\03.Implementation.csproj" />
-    <ProjectReference Include="..\MicroServices.TestEngine\02.SharedKernel.TestEngine.csproj" />
+    <ProjectReference Include="..\MicroServices.TestEngine\02.Core.TestEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
