--- a/src/MicroServices.Implementation/03.Implementation.csproj
+++ b/src/MicroServices.Implementation/03.Implementation.csproj
@@ -40,11 +40,12 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroServices\03.SharedKernel.csproj" />
+    <ProjectReference Include="..\MicroServices\03.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
