--- a/src/MicroServices.Tests/01.Core.Tests.csproj
+++ b/src/MicroServices.Tests/01.Core.Tests.csproj
@@ -33,7 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroServices.TestEngine\02.SharedKernel.TestEngine.csproj" />
+    <ProjectReference Include="..\MicroServices.TestEngine\02.Core.TestEngine.csproj" />
   </ItemGroup>
 
   <ItemGroup>
