--- a/samples/mastermind/GameService/Contract.Tests/A.Contract.Tests.csproj
+++ b/samples/mastermind/GameService/Contract.Tests/A.Contract.Tests.csproj
@@ -13,9 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Kingo.MicroServices.TestEngine" Version="4.0.19307.6-alpha" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
