--- a/src/MicroServices.Implementation.TestEngine/B.Implementation.TestEngine.csproj
+++ b/src/MicroServices.Implementation.TestEngine/B.Implementation.TestEngine.csproj
@@ -2,14 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>Kingo.MicroServices.Contract.TestEngine</AssemblyName>
-    <Description>Contains components to implement tests for the (validation-logic of) request-messages of a (Micro)Service.</Description>
-    <PackageId>Kingo.MicroServices.TestEngine</PackageId>
+    <AssemblyName>Kingo.MicroServices.Implementation.TestEngine</AssemblyName>
+    <Description>Contains components to implement tests for the Implementation-component(s) of a (Micro)Service.</Description>
     <PackageIconUrl>https://github.com/wimvangool/Kingo/blob/master/images/test.png?raw=true</PackageIconUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Sources\Kingo\src\MicroServices.TestEngine\Kingo.MicroServices.Contract.TestEngine.xml</DocumentationFile>
+    <DocumentationFile>C:\Sources\Kingo\src\MicroServices.Implementation.TestEngine\Kingo.MicroServices.Implementation.TestEngine.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,31 +20,28 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroServices.Contract\03.Contract.csproj" />
+    <ProjectReference Include="..\MicroServices.Contract.TestEngine\B.Contract.TestEngine.csproj" />
+    <ProjectReference Include="..\MicroServices.Implementation\C.Implementation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Compile Update="ExceptionMessages.Designer.cs">
+      <DependentUpon>ExceptionMessages.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>ExceptionMessages.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Update="ExceptionMessages.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ExceptionMessages.Designer.cs</LastGenOutput>
+      <Generator>ResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 
