--- a/src/MicroServices.Implementation.Tests/A.Implementation.Tests.csproj
+++ b/src/MicroServices.Implementation.Tests/A.Implementation.Tests.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <IsPackable>false</IsPackable>
-    <AssemblyName>Kingo.MicroServices.Contract.Tests</AssemblyName>
+    <AssemblyName>Kingo.MicroServices.Implementation.Tests</AssemblyName>
+    <AssemblyDescription>Contains all unit tests for the Kingo.MicroServices library.</AssemblyDescription>
     <RootNamespace>Kingo</RootNamespace>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>..\Kingo.snk</AssemblyOriginatorKeyFile>
-    <LangVersion>7.3</LangVersion>
+    <OutputType>Library</OutputType>
+    <LangVersion>7.3</LangVersion>    
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,26 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\MicroServices.Contract.TestEngine\02.Contract.TestEngine.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="ErrorMessages.Designer.cs">
-      <DependentUpon>ErrorMessages.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="ErrorMessages.resx">
-      <LastGenOutput>ErrorMessages.Designer.cs</LastGenOutput>
-      <Generator>ResXFileCodeGenerator</Generator>
-    </EmbeddedResource>
+    <ProjectReference Include="..\MicroServices.Contract.Tests\A.Contract.Tests.csproj" />
+    <ProjectReference Include="..\MicroServices.Implementation.TestEngine\B.Implementation.TestEngine.csproj" />
   </ItemGroup>
 
 </Project>
