--- a/src/MicroServices.Implementation/C.Implementation.csproj
+++ b/src/MicroServices.Implementation/C.Implementation.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MicroServices.Contract\03.Contract.csproj" />
+    <ProjectReference Include="..\MicroServices.Contract\C.Contract.csproj" />
   </ItemGroup>
 
   <ItemGroup>
