Corrected a bunch of dependency versions.

--- a/src/MicroServices.Contract.Tests/A.Contract.Tests.csproj
+++ b/src/MicroServices.Contract.Tests/A.Contract.Tests.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MicroServices.Contract.TestEngine\B.Contract.TestEngine.csproj" />
+    <ProjectReference Include="..\MicroServices.Core.Tests\A.Core.Tests.csproj" />
   </ItemGroup>
 
   <ItemGroup>
