--- a/src/MicroServices.Core/B.Core.csproj
+++ b/src/MicroServices.Core/B.Core.csproj
@@ -10,4 +10,12 @@
     <Compile Include="..\AssemblyInfo.solution.cs" Link="Properties\AssemblyInfo.solution.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\Kingo.snk" Link="Properties\Kingo.snk" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+  </ItemGroup>
+
 </Project>
