Moved core-components to core assembly.

--- a/src/MicroServices.Core.Tests/A.Core.Tests.csproj
+++ b/src/MicroServices.Core.Tests/A.Core.Tests.csproj
@@ -21,4 +21,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MicroServices.Core\B.Core.csproj" />
+  </ItemGroup>
+
 </Project>
