--- a/src/MicroServices.Core.Tests/A.Core.Tests.csproj
+++ b/src/MicroServices.Core.Tests/A.Core.Tests.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <AssemblyName>Kingo.MicroServices.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
