--- a/src/MicroServices.Contract.TestEngine/B.Contract.TestEngine.csproj
+++ b/src/MicroServices.Contract.TestEngine/B.Contract.TestEngine.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>Kingo.MicroServices.Contract.TestEngine</AssemblyName>
     <Description>Contains components to implement tests for the (validation-logic of) request-messages of a (Micro)Service.</Description>
-    <PackageId>Kingo.MicroServices.TestEngine</PackageId>
+    <PackageId>Kingo.MicroServices.Contract.TestEngine</PackageId>
     <PackageIconUrl>https://github.com/wimvangool/Kingo/blob/master/images/test.png?raw=true</PackageIconUrl>
   </PropertyGroup>
 
