--- a/src/MicroServices.Implementation/C.Implementation.csproj
+++ b/src/MicroServices.Implementation/C.Implementation.csproj
@@ -24,7 +24,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Sources\Kingo\src\MicroServices.Implementation.Core\Kingo.MicroServices.Implementation.xml</DocumentationFile>
+    <DocumentationFile>C:\Sources\Kingo\src\MicroServices.Implementation\Kingo.MicroServices.Implementation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
