Renamed RequestTest to RequestMessageTest.

--- a/samples/mastermind/GameService/Implementation.Controllers.Api/B.Controllers.Api.csproj
+++ b/samples/mastermind/GameService/Implementation.Controllers.Api/B.Controllers.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Implementation.Controllers.ServiceBus\C.Controllers.ServiceBus.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\" />
+  </ItemGroup>
+
 </Project>
