--- a/samples/mastermind/GameService/Implementation.DataAccess.Queries/C.DataAccess.Queries.csproj
+++ b/samples/mastermind/GameService/Implementation.DataAccess.Queries/C.DataAccess.Queries.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Implementation.Logic.Application\B.Logic.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\" />
+  </ItemGroup>
+
 </Project>
