--- a/samples/mastermind/GameService/Implementation.DataAccess.Repositories/B.DataAccess.Repositories.csproj
+++ b/samples/mastermind/GameService/Implementation.DataAccess.Repositories/B.DataAccess.Repositories.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Implementation.DataAccess.Queries\C.DataAccess.Queries.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\" />
+  </ItemGroup>
+
 </Project>
