--- a/samples/mastermind/GameService/Implementation.Logic.Domain/C.Logic.Domain.csproj
+++ b/samples/mastermind/GameService/Implementation.Logic.Domain/C.Logic.Domain.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Implementation\B.Implementation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\" />
+  </ItemGroup>
+
 </Project>
