--- a/samples/mastermind/GameService/Implementation.DataAccess.Tests/A.DataAccess.Tests.csproj
+++ b/samples/mastermind/GameService/Implementation.DataAccess.Tests/A.DataAccess.Tests.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Implementation.Logic.Tests\A.Logic.Tests.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Games\" />
+  </ItemGroup>
+
 </Project>
