--- a/src/MicroServices.Core/B.Core.csproj
+++ b/src/MicroServices.Core/B.Core.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
